[project]
name = "arviz-meta"
version = "0.1.0"
description = "ArviZ monorepo"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "arviz-base",
    "arviz-plots",
    "arviz-stats",
    "ipdb>=0.13.13",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.uv.sources]
arviz-base = {workspace = true}
arviz-plots = {workspace = true}
arviz-stats = {workspace = true}

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
